--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
   grid-column: NaN / span undefined;
   grid-row: NaN / span undefined;
   grid-area: 1 / 1 / 2 / 2;
-  background: #fff;
+  
   border-radius: 10px;
   padding: 15px;
   
@@ -122,7 +122,7 @@
   grid-column: NaN / span undefined;
   grid-row: NaN / span undefined;
   grid-area: 1 / 2 / 2 / 3;
-  background: #fff;
+
   border-radius: 10px;
   padding: 15px;
   
@@ -148,11 +148,11 @@
   top: 114px;
 }
 .image-9 {
-  width: 152px;
-  height: 137px;
+  width: 20%;
+ 
   position: absolute;
-  left: 403px;
-  top: 169px;
+  right: 5%;
+  top: 200px;
   object-fit: cover;
   aspect-ratio: 152/137;
 }
@@ -164,20 +164,10 @@
   grid-column: NaN / span undefined;
   grid-row: NaN / span undefined;
   grid-area: 2 / 1 / 3 / 2;
-  background: #fff;
+ 
   border-radius: 10px;
   padding: 15px;
   
-}
-._6-29-7-3 {
-  color: #000000;
-  text-align: left;
-  font-family: "NotoSans-Regular", sans-serif;
-  font-size: 32px;
-  font-weight: 400;
-  position: absolute;
-  left: 0px;
-  top: 114px;
 }
 .frame-6 {
   width: 555px;
@@ -187,20 +177,22 @@
   grid-column: NaN / span undefined;
   grid-row: NaN / span undefined;
   grid-area: 2 / 2 / 3 / 3;
-  background: #fff;
+  
   border-radius: 10px;
   padding: 15px;
   
 }
 .image-10 {
-  width: 144px;
-  height: 140px;
+  width: 20%;
+ 
   position: absolute;
-  left: 411px;
-  top: 166px;
+  right: 5%;
+  bottom: 0%;
   object-fit: cover;
-  aspect-ratio: 144/140;
+  z-index: 9999;
 }
+
+
 
 .component-1 {
   display: flex;
@@ -279,7 +271,104 @@
     translate: -50%;
     top: 114px;
   }
+  .div5 {
+    color: #000000;
+    text-align: left;
+    font-family: "NotoSans-Bold", sans-serif;
+    font-size: 150%;
+    font-weight: 700;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+  }
+  .div6 {
+    color: #000000;
+    text-align: left;
+    font-family: "NotoSans-Regular", sans-serif;
+    font-size: 110%;
+    font-weight: 400;
+    position: absolute;
+    left: 0px;
+    top: 114px;
+  }
+  .div2 {
+    color: #000000;
+    text-align: left;
+    font-family: "NotoSans-Medium", sans-serif;
+    font-size: 120%;
+    font-weight: 500;
+    position: absolute;
+    left: 10%;
+    top: 262px;
+  }
+  .div3 {
+    color: #000000;
+    text-align: left;
+    font-family: "NotoSans-Medium", sans-serif;
+    font-size: 120%;
+    font-weight: 500;
+    position: absolute;
+    left: 40%;
+    top: 262px;
+  }
+  .div4 {
+    color: #000000;
+    text-align: left;
+    font-family: "NotoSans-Medium", sans-serif;
+    font-size: 120%;
+    font-weight: 500;
+    position: absolute;
+    left: 70%;
+    top: 262px;
+  }
+  .image-10 {
+    width: 150px;
+   
+    position: absolute;
+    right: 10%;
+    bottom:20px;
+    object-fit: cover;
+    z-index: 9999;
+  }
+  .image-9 {
+    width: 150px;
+   
+    position: absolute;
+    right: 10%;
+    top: 200px;
+    object-fit: cover;
+  }
+  .image-2 {
+  width: 120px;
+  height: auto;
+  position: absolute;
+  left: 3%;
+  top: 79px;
+  object-fit: cover;
+  
 }
+.image-7 {
+  width: 120px;
+  height: auto;
+  position: absolute;
+  left: 63%;
+  top: 81px;
+  object-fit: cover;
+  aspect-ratio: 130/166;
+}
+.image-8 {
+  width: 140px;
+  height: auto;
+  position: absolute;
+  left: 33%;
+  top: 79px;
+  object-fit: cover;
+  aspect-ratio: 153/159;
+}
+  
+  
+}
+
 
 
 .nav {
